2001-12-23  Masatake YAMATO  <yamato@redhat.com>

	* input-png.h: string->at_string.

2001-12-23  Martin Weber <martweb@gmx.net>

        * (.*): Remove version num in comments.
	Use at_string instead of string.
	Change the data type for number.
	Remove decl of version_string. (e.g. unsigned -> unsigned short)

	* version.c: Include ptypes.h.

	* ptypes.h: Declare version_string. Remove at_string.

	* output-emf.c (OutputEmf, GetEmfStats): Initialized last_color.

	* output-dxf.c (output_layer, out_splines, out_splines): 
	Initialized local vars.

	* main.c (get_percent): Removed.

	* logreport.h: R.

	* logreport.c: R.

	* input-tga.h: P, R.

	* input-tga.c (tga_load_image): Remove a
	parameter `filename'.
	(tga_load_image): Likewise.

	* fit.c (filter_angle, find_curve_vectors): Removed.
	(fit_with_least_squares): Remove local variable `iteration'.

	* despeckle.c (recolor, despeckle_iteration): 
	Remove a parameter, `current_size'.

	* autotrace.sln: New file.

	* autotrace.vcproj: Likewise.

	(Message-ID: <3C23045E.E5636FF5@gmx.net>).
	
2001-12-18  Per Grahn <pergra@foi.se>

        * output-emf.c (output_emf_writer): added `dpi'.

2001-12-19  Masatake YAMATO  <yamato@redhat.com>

	* main.c (read_command_line): Used
	output_get_handler_by_suffix.
	(main): Use at_output_get_handler.
	Use suffix of output_name to select output_handler.
	
	* output.c (output_get_handler): Used suffix.

	* output.[ch] (output_get_handler_by_suffix): New function.
	
	* autotrace.[ch] (at_output_get_handler_by_suffix): New function.
	
2001-12-18  Masatake YAMATO  <yamato@redhat.com>
	
	* Makefile.am (output_src): Added mif.[ch].

2001-12-18  Per Grahn <pergra@foi.se>

	* autotrace.dsp (SOURCE): Added mif.
	
	* output-mif.[ch]: New files.

	* autotrace.h (at_output_write_func, at_output_write):
	Added dpi as a parameter.

	* main.c: Added new option dpi.

	* output-*.[ch]: Added dpi as a parameter.

	* output.c (output_formats):  Added mif.

	(Message-ID: <3C1A734D.A11F290A@gmx.net>).