@@ -149,9 +149,6 @@ struct _at_fitting_opts_type
    the approximation to the tangent at that point.  (-tangent-surround)  */
   unsigned tangent_surround;
 
-/* Thin all the lines in the image prior to fitting. */
-  at_bool thin;
-
 /* Despeckle level */
   int despeckle_level;
 
